...
          <Pressable
            testID={
              toolbar.doneTestID ??
              (testID ? `${testID}-toolbar-done` : undefined)
            }
            accessibilityLabel={
              typeof toolbar.done === 'string' ? toolbar.done : 'Done'
            }
            accessibilityRole="button"
            onPress={() => {
              focused.current = false;
              onBlur?.(withText<TextFieldEvent>(undefined, { text }));
            }}
...
